--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,51 +1,166 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.eot');
+  src: url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Roboto-Regular.woff') format('woff'),
+  url('../fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  }
+
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  }
+
+.navbar {
+  padding: 5px 0px 5px 0px;
+  height: 45px;
 }
 
-.container-fixed {
-  position:fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.container {
-  position: relative;
-  width: 80vh; /*Изменяяя этот параметр, изменится масштаб всей рулетки*/
-  background-color: #07364e;
-  border: 10px solid #ffffff;
-  
-}
-.pb-100 {
-  padding-bottom: 100%;
-}
-.wrapper {
-  position:absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
- }
-
-.circle {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  overflow: hidden;
-}
-.puzzle {
-  position: relative;
-  /* font-size: calc(100vw / 50); */
-}
-.active {
-  background-color: #97172d;
-}
-.blue {
-  background-color: #0080aa;
+.container-pd-0 {
+  background-color: #3a6988;
 }
 
-.impact { 
-  /* font-size: calc(100vw / 50); */
+.container-footer {
+  background-color: #e8eff4;;
+}
+.spoiler-header{
+  display: none;
+  margin-top: 8px;
+}
+
+
+/*header*/
+.header {
+  padding: 34px 0px 24px 0px;
+}
+
+h1.header-title{
+  font-size: 32px;
+  line-height: 32px;
+  color: #666666;
+}
+.description{
+  font-size: 16px;
+  line-height: 16px;
+  color: #4c4c4c;
+}
+
+.header address{
+  text-align: right;
+  margin: 7px 35px 0px 0px;
+}
+.header-address, .header-contact{
+  font-size: 12px;
+  line-height: 12px;
+  color: #666666;
+}
+.header-contact{
+  margin-top: 23px;
+  line-height: 14px;
+}
+
+
+/*navbar*/
+.navbar ul li{
+  margin: 0px 16px 0px 0px;
+}
+
+.navbar ul li {
+  background-color: #f5f5f5;
+}
+.navbar ul li.active a {
+  color: #3a6988;
+}
+.navbar ul li a{
+  display: block;
+  padding: 13px 20px 13px 20px;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  /*color: #ffffff;*/  /*Окрашивает ссылки дробдауна*/
+}
+.navbar ul li a:hover{
+  text-decoration: none;
+}
+input.form-control, button.btn{
+  padding: 0px 0px 0px 0px;
+  height: 24px;
+  border-radius: 0;
+}
+button.btn{
+  width: 73px;
+}
+
+
+@media(max-width: 991px){
+  .header address{
+    margin-right: 0;
+  }
+  .navbar ul li{
+    margin: 0px 0px 0px 0px;
+  }
+  .navbar ul li a{
+    padding: 0px 20px 0px 17px;
+  }
+}
+
+@media(max-width: 767px){
+  .navbar{
+    height: auto;
+  }
+}
+
+@media(max-width: 575px){
+  /*header*/
+  .header{
+    padding: 0px 0px 0px 0px;
+  }
+  .main-header{
+    display: none;
+  }
+  .spoiler-header{
+    display: block;
+  }
+  .header-contact{
+    margin: 0;
+    line-height: 19px;
+  }
+  h1.header-title{
+    position: relative;
+    padding: 0px 0px 0px 30px;
+    cursor: pointer;
+  }
+  h1.header-title::before, h1.header-title::after{
+    content: '';
+    width: 10px;
+    height: 1px;
+    background-color: #000000;
+    position:absolute;
+    top: 8px;
+    transition: all 0.3s ease 0s;
+  }
+  h1.header-title::before{
+    transform: rotate(40deg);
+    left: 0;
+  }
+  h1.header-title::after{
+    transform: rotate(-40deg);
+    left: 8px;
+  }
+  h1.header-title.active::before, h1.header-title.active::after{
+    background-color: red;
+  }
+  h1.header-title.active::before{
+    transform: rotate(-40deg);
+  }
+  h1.header-title.active::after{
+    transform: rotate(40deg);
+  }
+  .header-text{
+    display: none;
+  }
 }
