--- a/app/index.pug
+++ b/app/index.pug
@@ -4,17 +4,103 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Roulette
+    title Universal College
+    link(rel="stylesheet", href="css/bootstrap-reboot.min.css")
+    link(rel="stylesheet", href="css/bootstrap.min.css")
     link(rel="stylesheet", href="css/style.css")
   body
-    .container-fixed
-      .container
-        .pb-100
-          .wrapper
-            .circle
-              .puzzle <span>$55</span><br>annual target price of dolutegravir regimen per person per year in resource-limited setting
-              .puzzle.blue <span>15 M</span><br>number of people living with HIV without access to treatment
-              .puzzle 7-10 <br> years historically taken to introduce pioneering HIV treatments in Africa
-              .puzzle.active <span>3</span><br>numbers of years taken to introduce dolutegravir in Africa
-              .puzzle.blue <span>94</span><br>numbers of countries who can access generic versions of dolutegravir
-              .impact <span>Impact</span><br>US $270 million - annual savings possible from scale-up of dolutegravir-based regimens if
+    .container-lg
+      header.header
+        .main-header
+          .row
+            .col-sm-6.col-md-6.col-lg-6
+              .header-info
+                h1.header-title Universal College
+                .description Free PSD Website Template
+            .col-sm-6.col-md-6.col-lg-6
+              address
+                .header-address Libero | Maecenas | Mauris | Suspendisse<br>
+                .header-contact Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com
+        .spoiler-header
+          h1.header-title Universal College
+          .header-text
+            p.description Free PSD Website Template
+            p.header-address Libero | Maecenas | Mauris | Suspendisse<br>
+            p.header-contact Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com
+
+    .container-lg.container-pd-0
+      nav.navbar.navbar-expand-md.navbar-light
+        button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation") <span class="navbar-toggler-icon"></span>
+        .collapse.navbar-collapse#navbarSupportedContent
+          ul.navbar-nav.mr-auto
+            li
+              a(href="#") Home <span class="sr-only">(current)</span>
+            li
+              a(href="#") About
+            li
+              a(href="#") Page
+            li.dropdown
+              a.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") DropDown
+              .dropdown-menu(aria-labelledby="navbarDropdown")
+                a.dropdown-item(href="#") Action
+                a.dropdown-item(href="#") Another action
+                .dropdown-divider
+                a.dropdown-item(href="#") Something else here
+            li
+              a(href="#") Gallery
+          form.form-inline.my-2.my-lg-0
+            input.form-control.mr-sm-2(type="search" placeholder="Search this website..." aria-label="Search")
+            button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
+
+    .container-lg
+      .hero  gregter
+
+      section.content ergr
+
+    .container-lg.container-footer
+      footer.footer Footer
+    .container-lg.container-pd-0
+      .copyright
+        p Copyring   hh
+    script(src="js/jquery-3.5.1.min.js")
+    script(src="js/bootstrap.min.js")
+    script(src="js/script.js")
+
+
+
+
+//- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+//-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+//-     <span class="navbar-toggler-icon"></span>
+//-   </button>
+
+//-   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+//-     <ul class="navbar-nav mr-auto">
+//-       <li class="nav-item active">
+//-         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+//-       </li>
+//-       <li class="nav-item">
+//-         <a class="nav-link" href="#">Link</a>
+//-       </li>
+//-       <li class="nav-item dropdown">
+//-         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+//-           Dropdown
+//-         </a>
+//-         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+//-           <a class="dropdown-item" href="#">Action</a>
+//-           <a class="dropdown-item" href="#">Another action</a>
+//-           <div class="dropdown-divider"></div>
+//-           <a class="dropdown-item" href="#">Something else here</a>
+//-         </div>
+//-       </li>
+//-       <li class="nav-item">
+//-         <a class="nav-link disabled" href="#">Disabled</a>
+//-       </li>
+//-     </ul>
+//-     <form class="form-inline my-2 my-lg-0">
+//-       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+//-       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+//-     </form>
+//-   </div>
+//- </nav>
