--- a/app/index.pug
+++ b/app/index.pug
@@ -29,11 +29,11 @@ html(lang="en")
             p.header-contact Tel: xxxxx xxxxxxxxxx | Mail: info@domain.com
 
     .container-lg.container-pd-0
-      nav.navbar.navbar-expand-md.navbar-light
+      nav.navbar.navbar-expand-lg.navbar-light
         button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation") <span class="navbar-toggler-icon"></span>
         .collapse.navbar-collapse#navbarSupportedContent
           ul.navbar-nav.mr-auto
-            li
+            li.active
               a(href="#") Home <span class="sr-only">(current)</span>
             li
               a(href="#") About
@@ -49,7 +49,7 @@ html(lang="en")
             li
               a(href="#") Gallery
           form.form-inline.my-2.my-lg-0
-            input.form-control.mr-sm-2(type="search" placeholder="Search this website..." aria-label="Search")
+            input.form-control.mr-sm-2(type="search" placeholder="Search this website..." aria-label="Search" maxlength="25")
             button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
 
     .container-lg
@@ -65,42 +65,3 @@ html(lang="en")
     script(src="js/jquery-3.5.1.min.js")
     script(src="js/bootstrap.min.js")
     script(src="js/script.js")
-
-
-
-
-//- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-//-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-
-//-     <span class="navbar-toggler-icon"></span>
-//-   </button>
-
-//-   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-//-     <ul class="navbar-nav mr-auto">
-//-       <li class="nav-item active">
-//-         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-//-       </li>
-//-       <li class="nav-item">
-//-         <a class="nav-link" href="#">Link</a>
-//-       </li>
-//-       <li class="nav-item dropdown">
-//-         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-//-           Dropdown
-//-         </a>
-//-         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-//-           <a class="dropdown-item" href="#">Action</a>
-//-           <a class="dropdown-item" href="#">Another action</a>
-//-           <div class="dropdown-divider"></div>
-//-           <a class="dropdown-item" href="#">Something else here</a>
-//-         </div>
-//-       </li>
-//-       <li class="nav-item">
-//-         <a class="nav-link disabled" href="#">Disabled</a>
-//-       </li>
-//-     </ul>
-//-     <form class="form-inline my-2 my-lg-0">
-//-       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-//-       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-//-     </form>
-//-   </div>
-//- </nav>
