--- a/app/index.pug
+++ b/app/index.pug
@@ -57,11 +57,44 @@ html(lang="en")
 
       section.content ergr
 
-    .container-lg.container-footer
-      footer.footer Footer
+    .container-lg.container-contact
+      .contact
+        .contact-main
+          .row.justify-content-center
+            .col-12.col-sm-7.col-md-6.col-lg-4
+              .contact-item
+                .contact-form
+                  h4.title Stay In The Know !
+                  .contact-divider
+                  .contact-action Please enter your email to join our mailing list
+                  .contact-block
+                    form.form-inline
+                      input.form-input(type="text" minlength="4")
+                      button.btn.btn-input.btn-outline-success(type="submit") Go
+                    a(href="#").contact-unsubscribe To unsubsribe please click here »
+            .col-12.col-sm-7.col-md-6.col-lg
+              .contact-item
+                h4.title Lacus interdum
+                .contact-divider
+                .contact-description Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque
+            .col-12.col-sm-7.col-md-6.col-lg
+              .contact-item
+                h4.title Lacus interdum
+                .contact-divider
+                .contact-description Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque
+            .col-12.col-sm-7.col-md-6.col-lg
+              .contact-item
+                h4.title Lacus interdum
+                .contact-divider
+                .contact-description Lacus interdum Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque
+
     .container-lg.container-pd-0
-      .copyright
-        p Copyring   hh
+      footer.footer
+        .row
+          .col
+            .copyright Copyright © 2013 Domain Name - All Rights Reserved
+          .col
+            .template Template by OS Templates
     script(src="js/jquery-3.5.1.min.js")
     script(src="js/bootstrap.min.js")
     script(src="js/script.js")
