--- a/app/index.pug
+++ b/app/index.pug
@@ -90,10 +90,10 @@ html(lang="en")
 
     .container-lg.container-pd-0
       footer.footer
-        .row
-          .col
+        .row.justify-content-col-center.justify-content-md-start
+          .col-12.col-md-6
             .copyright Copyright © 2013 Domain Name - All Rights Reserved
-          .col
+          .col-12.col-md-6
             .template Template by OS Templates
     script(src="js/jquery-3.5.1.min.js")
     script(src="js/bootstrap.min.js")
