--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,11 +14,7 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   }
-
-.navbar {
-  padding: 0px;
-}
-
+  
 .container-pd-0 {
   background-color: #3a6988;
 }
@@ -28,14 +24,10 @@
 }
 .spoiler-header{
   display: none;
-  margin-top: 8px;
 }
 
 
 /*header*/
-.header {
-  padding: 34px 0px 24px 0px;
-}
 
 h1.header-title{
   font-size: 32px;
@@ -50,7 +42,6 @@ h1.header-title{
 
 .header address{
   text-align: right;
-  margin: 7px 35px 0px 0px;
 }
 .header-address, .header-contact{
   font-size: 12px;
@@ -58,7 +49,6 @@ h1.header-title{
   color: #666666;
 }
 .header-contact{
-  margin-top: 23px;
   line-height: 14px;
 }
 
@@ -83,10 +73,8 @@ h1.header-title{
 .navbar ul li a:focus,.navbar ul li a:hover {color:#3a6988;text-decoration:none;background-color:#f5f5f5}
 input.form-control{
   width: 220px !important;
-  padding: 0px 5px !important;
 }
 input.form-control, button.btn{
-  padding: 0px 0px 0px 0px;
   height: 24px;
   border-radius: 0;
   font-size: 12px;
@@ -110,9 +98,6 @@ button.btn{
 }
 
 /*Contact*/
-.contact{
-  padding: 28px 0px 21px 0px;
-}
 .contact .contact-divider{
   height: 1px;
   background-color: #c0c4c6;
@@ -128,7 +113,7 @@ button.btn{
   color: #98989a;
 }
 .contact .contact-form, .footer .copyright{
-  margin: 0px 0px 0px 10px;  /*margin-left 20px*/
+  margin: 0px 0px 0px 10px;  /*margin-left 10px*/
 }
 .contact .contact-item h4{
   font-size: 20px;
@@ -138,24 +123,23 @@ button.btn{
 .contact .contact-block{
   margin: 10px 0px 16px 0px;;
 }
-.contact-block .form-input, .contact-block .btn-input{
-  width: 242px; /*244px*/
+.contact-block .form-input{
+  width: 242px !important; /*244px*/
   height: 23px;
   outline-color: #ffffff;
+  
 }
 .contact-block .btn-input{
   width: 33px;/*35px*/
+  height: 23px;
   border: 1px solid;
   font-size: 14px;
   line-height: 14px;
   color: #000000;
-  margin-left: 9px;
+  padding: 0px 0px 0px 0px;
 }
 
 /*Foteer*/
-.footer{
-  padding: 13px 0px;
-}
 .footer .copyright, .footer .template{
   font-size: 12px;
   line-height: 12px;
@@ -167,10 +151,6 @@ button.btn{
 }
 
 @media(max-width: 991px){
-  /*header*/
-  .header address{
-    margin-right: 0;
-  }
   /*contact*/
   .contact .contact-form, .footer .copyright{
     margin: 0px;
@@ -190,6 +170,9 @@ button.btn{
 
 @media(max-width: 575px){
   /*header, spoiler*/
+  .header address{
+    text-align: left;
+  }
   .header{
     padding: 0px 0px 0px 0px;
   }
