--- a/app/index.pug
+++ b/app/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
     link(rel="stylesheet", href="css/bootstrap.min.css")
     link(rel="stylesheet", href="css/style.css")
   body
-    .container-lg
+    .container-xl
       header.header.pt-sm-4.pb-sm-4
         .main-header.pt-sm-2.pb-sm-2
           .row
@@ -31,7 +31,7 @@ html(lang="en")
               a.header-contact(href="tel:+0000000000") Tel: xxxxx xxxxxxxxxx | 
               a.header-contact(href="mailto:info@domain.com") Mail: info@domain.com
 
-    .container-lg.container-pd-0
+    .container-xl.container-pd-0
       nav.navbar.px-0.py-0.navbar-expand-lg.navbar-light
         button.navbar-toggler.my-2.my-lg-0(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation") <span class="navbar-toggler-icon"></span>
         .collapse.navbar-collapse#navbarSupportedContent
@@ -55,12 +55,98 @@ html(lang="en")
             input.form-control.my-2.mr-2(type="search" placeholder="Search this website..." aria-label="Search" maxlength="25")
             button.btn.btn-outline-success.my-2(type="submit") Search
 
-    .container-lg
-      .hero  gregter
+    .container-xl
+      .hero  gregte
 
-      section.content ergr
+      section.content.pt-3.mt-2
+        .row
+          .col-md-8
+            .main-content
+              .row
+                .col-md-6
+                  .cart.mb-4.pb-1
+                    h2.content-title Indonectetus facilis leo nibh
+                    .divider
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
+                    .cart-description
+                      p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
+                      p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
+                    a(href="#").cart-link Continue Reading »
+                .col-md-6
+                  .cart.mb-4.pb-1
+                    h2.content-title Indonectetus facilis leo nibh
+                    .divider
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
+                    .content-description
+                      p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
+                      p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
+                    a(href="#").cart-link Continue Reading »
+                .col-md-6
+                  .cart.mb-4.pb-1
+                    h2.content-title Indonectetus facilis leo nibh
+                    .divider
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
+                    .cart-description
+                      p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
+                      p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
+                    a(href="#").cart-link Continue Reading »
+                .col-md-6
+                  .cart.mb-4.pb-1
+                    h2.content-title Indonectetus facilis leo nibh
+                    .divider
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
+                    .cart-description
+                      p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
+                      p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
+                    a(href="#").cart-link Continue Reading »
+          .col-md-4
+            aside.mb-4.pb-1
+              .row
+                .col-12
+                  h2.content-title Ametorci Phasellus
+                  .divider
+              
 
-    .container-lg.container-contact
+
+              h2.content-title Ametorci Phasellus
+              .divider
+              .row.mt-3.pt-1
+                .col
+                  .widget
+                    a(href="#")
+                      img(src="img/80of80px.png", alt="#")
+                .col
+                  .widget
+                    a(href="#")
+                      img(src="img/80of80px.png", alt="#")
+                .col
+                  .widget
+                    a(href="#")
+                      img(src="img/80of80px.png", alt="#")
+              .row.mt-3.pt-1
+                .col
+                  .widget
+                    a(href="#")
+                      img(src="img/80of80px.png", alt="#")
+                .col
+                  .widget
+                    a(href="#")
+                      img(src="img/80of80px.png", alt="#")
+                .col
+                  .widget
+                    a(href="#")
+                      img(src="img/80of80px.png", alt="#")
+
+
+              
+
+
+
+
+
+
+
+    .container-xl.container-contact
       .contact.pt-4.pb-3
         .contact-main.pt-1
           .row.justify-content-center
@@ -68,7 +154,7 @@ html(lang="en")
               .contact-item
                 .contact-form
                   h4.title Stay In The Know !
-                  .contact-divider
+                  .divider
                   .contact-action Please enter your email to join our mailing list
                   .contact-block
                     form.form-inline
@@ -78,20 +164,20 @@ html(lang="en")
             .col-12.col-sm-7.col-md-6.col-lg
               .contact-item
                 h4.title Lacus interdum
-                .contact-divider
+                .divider
                 .contact-description Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque
             .col-12.col-sm-7.col-md-6.col-lg
               .contact-item
                 h4.title Lacus interdum
-                .contact-divider
+                .divider
                 .contact-description Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque
             .col-12.col-sm-7.col-md-6.col-lg
               .contact-item
                 h4.title Lacus interdum
-                .contact-divider
+                .divider
                 .contact-description Lacus interdum Lorem ipsum dolor Suspendisse in neque Praesent et eros Lorem ipsum dolor Suspendisse in neque
 
-    .container-lg.container-pd-0
+    .container-xl.container-pd-0
       footer.footer.py-3
         .row.justify-content-col-center.justify-content-md-start
           .col-12.col-md-6
