--- a/app/index.pug
+++ b/app/index.pug
@@ -64,41 +64,41 @@ html(lang="en")
             .main-content
               .row
                 .col-md-6
-                  .cart.mb-4.pb-1
+                  .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
-                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
-                    .cart-description
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
+                    .cart-description.pb-4
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link Continue Reading »
+                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
                 .col-md-6
-                  .cart.mb-4.pb-1
+                  .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
-                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
-                    .content-description
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
+                    .cart-description.pb-4
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link Continue Reading »
+                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
                 .col-md-6
-                  .cart.mb-4.pb-1
+                  .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
-                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
-                    .cart-description
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
+                    .cart-description.pb-4
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link Continue Reading »
+                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
                 .col-md-6
-                  .cart.mb-4.pb-1
+                  .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
-                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.mx-auto.d-block
-                    .cart-description
+                    img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
+                    .cart-description.pb-4
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
-                    a(href="#").cart-link Continue Reading »
+                    a(href="#").cart-link.pl-2.py-1 Continue Reading »
           .col-md-4
             aside.mb-4.pb-1
               .row
@@ -108,34 +108,38 @@ html(lang="en")
               
 
 
-              h2.content-title Ametorci Phasellus
-              .divider
-              .row.mt-3.pt-1
-                .col
-                  .widget
-                    a(href="#")
-                      img(src="img/80of80px.png", alt="#")
-                .col
-                  .widget
-                    a(href="#")
-                      img(src="img/80of80px.png", alt="#")
-                .col
-                  .widget
-                    a(href="#")
-                      img(src="img/80of80px.png", alt="#")
-              .row.mt-3.pt-1
-                .col
-                  .widget
-                    a(href="#")
-                      img(src="img/80of80px.png", alt="#")
-                .col
-                  .widget
-                    a(href="#")
-                      img(src="img/80of80px.png", alt="#")
-                .col
-                  .widget
-                    a(href="#")
-                      img(src="img/80of80px.png", alt="#")
+
+              .widget-wrapper
+                .row.mt-3.pt-1
+                  .col
+                    h2.content-title Ametorci Phasellus
+                    .divider
+                .row.mt-2.pt-2
+                  .col-4
+                    .widget
+                      a(href="#")
+                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                  .col
+                    .widget
+                      a(href="#")
+                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                  .col
+                    .widget
+                      a(href="#")
+                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                .row.mt-3.pt-3
+                  .col
+                    .widget
+                      a(href="#")
+                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                  .col
+                    .widget
+                      a(href="#")
+                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                  .col
+                    .widget
+                      a(href="#")
+                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
 
 
               
