--- a/app/index.pug
+++ b/app/index.pug
@@ -60,10 +60,10 @@ html(lang="en")
 
       section.content.pt-3.mt-2
         .row
-          .col-md-8
+          .col-md-7.col-lg-8
             .main-content
               .row
-                .col-md-6
+                .col-md-12.col-lg-6
                   .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
@@ -72,41 +72,52 @@ html(lang="en")
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     a(href="#").cart-link.pl-2.py-1 Continue Reading »
-                .col-md-6
+                .col-md-12.col-lg-6
                   .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
                     img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
-                    .cart-description.pb-4
+                    .cart-description.pb-4.mb-3
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     a(href="#").cart-link.pl-2.py-1 Continue Reading »
-                .col-md-6
+                .col-md-12.col-lg-6
                   .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
                     img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
-                    .cart-description.pb-4
+                    .cart-description.pb-4.mb-3
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     a(href="#").cart-link.pl-2.py-1 Continue Reading »
-                .col-md-6
+                .col-md-12.col-lg-6
                   .cart.mb-4.pb-1.mx-auto
                     h2.content-title Indonectetus facilis leo nibh
                     .divider
                     img(src="img/300of150px.png", alt="#").cart-img.img-fluid.img-fluid.mt-2.mb-3
-                    .cart-description.pb-4
+                    .cart-description.pb-4.mb-3
                       p Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.
                       p Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.
                     a(href="#").cart-link.pl-2.py-1 Continue Reading »
-          .col-md-4
+          .col-md-5.col-lg-4
             aside.mb-4.pb-1
               .row
                 .col-12
                   h2.content-title Ametorci Phasellus
                   .divider
-              
-
+                  .widget-news.ml-0.pt-3.mb-3
+                    .row.no-gutters
+                      .col-3
+                        .widget.mx-auto
+                          img(src="img/80of80px.png", alt="#").img-fluid
+                      .col-9
+                        h2.content-title.ml-2.pl-1.mb-0 Indonectetus facilis leo nibh
+                        .cart-description.ml-2.mb-1.pl-1 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
+                        .link-block
+                          a(href="#").cart-link.pl-2.py-1.mr-0 Continue Reading »
+                  .row
+                    .col-12
+                      .divider
 
 
               .widget-wrapper
@@ -114,32 +125,38 @@ html(lang="en")
                   .col
                     h2.content-title Ametorci Phasellus
                     .divider
-                .row.mt-2.pt-2
+                .row.mt-2.pt-2.no-gutters
                   .col-4
-                    .widget
-                      a(href="#")
-                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                    .widget.mx-auto
+                      .block-img
+                        a(href="#")
+                          img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
                   .col
-                    .widget
-                      a(href="#")
-                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                    .widget.mx-auto
+                      .block-img
+                        a(href="#")
+                          img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
                   .col
-                    .widget
-                      a(href="#")
-                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
-                .row.mt-3.pt-3
+                    .widget.mx-auto
+                      .block-img
+                        a(href="#")
+                          img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                .row.mt-3.pt-3.no-gutters
                   .col
-                    .widget
-                      a(href="#")
-                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                    .widget.mx-auto
+                      .block-img
+                        a(href="#")
+                          img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
                   .col
-                    .widget
-                      a(href="#")
-                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                    .widget.mx-auto
+                      .block-img
+                        a(href="#")
+                          img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
                   .col
-                    .widget
-                      a(href="#")
-                        img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
+                    .widget.mx-auto
+                      .block-img
+                        a(href="#")
+                          img(src="img/80of80px.png", alt="#").img-fluid.d-block.mx-auto
 
 
               
