refacroring link-block in widget-news

--- a/app/index.pug
+++ b/app/index.pug
@@ -116,9 +116,9 @@ html(lang="en")
                         .col-8.col-md-8
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
-                            .cart-description.mb-1 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
+                            .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .link-block.ml-auto
-                              a(href="#").cart-link.pl-2.py-1.mr-0 Continue Reading »
+                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -131,9 +131,9 @@ html(lang="en")
                         .col-8.col-md-8
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
-                            .cart-description.mb-1 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
+                            .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .link-block.ml-auto
-                              a(href="#").cart-link.pl-2.py-1.mr-0 Continue Reading »
+                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -146,9 +146,9 @@ html(lang="en")
                         .col-8.col-md-8
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
-                            .cart-description.mb-1 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
+                            .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .link-block.ml-auto
-                              a(href="#").cart-link.pl-2.py-1.mr-0 Continue Reading »
+                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
                     .row
                       .col-12
                         .divider
@@ -161,9 +161,9 @@ html(lang="en")
                         .col-8.col-md-8
                           .widget-item.ml-1
                             h2.content-title.mb-0 Indonectetus facilis leo nibh 
-                            .cart-description.mb-1 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
+                            .cart-description.mb-0 Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.
                             .link-block.ml-auto
-                              a(href="#").cart-link.pl-2.py-1.mr-0 Continue Reading »
+                              a(href="#").cart-link.d-block.pl-2.py-1.mr-0 Continue Reading »
                     .row
                       .col-12
                         .divider
